--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,6 +25,10 @@
 
       <!-- Header -->
       <header>
+        <picture>
+          <source media="(max-width: 600px)" srcset="../images/hero-image_3-small.jpg">
+          <img src="../images/hero-image_3-large.jpg" alt="restaurant hero">
+        </picture>
         <div id="header-content">
           <h1 class="header-content-title">RESTORENT</h1>
           <h2 class="header-content-subtitle">
