implementing responsive image and lazy loading

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,8 @@
       <header>
         <picture>
           <source media="(max-width: 600px)" srcset="../images/hero-image_3-small.jpg">
-          <img src="../images/hero-image_3-large.jpg" alt="restaurant hero">
+          <source media="(min-width: 600px)" srcset="../images/hero-image_3-large.jpg">
+          <img src="../public/images/heros/hero-image_3.jpg" alt="restaurant hero">
         </picture>
         <div id="header-content">
           <h1 class="header-content-title">RESTORENT</h1>
