--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,9 +47,17 @@ header {
   justify-content: center;
   align-items: center;
 
-  // @include media('<=600px') {
-  //   background-image: url('../public/images/heros/hero-image_3.jpg') !important;
-  // }
+  picture {
+    // width: 100%;
+    width: 100vw;
+    overflow: hidden;
+    img {
+      min-width: 100%;
+      height: 100vh;
+      @include media('<=600px') {
+      }
+    }
+  }
 
   &::after {
     content: '';
